<resources>
    <string name="viewHolder">VIEWHOLDER</string>
    <string name="currentUser">CURRENTUSER</string>
    <string name="likeButton">LIKEBUTTON</string>
    <string name="dislikeButton">DISLIKEBUTTON</string>
    <string name="app_name">DATPic</string>
    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="sign_up_button_label">Sign Up</string>
    <string name="signup_error_message">Please make sure you enter an email address, nickname and password!</string>
    <string name="signup_error_title">Error!</string>
    <string name="signup_success">Account successfully created! You can now Login.</string>
    <string name="login_error_message">Please make sure you enter an email address and password!</string>
    <string name="login_error_title">Error!</string>
    <string name="login_button_label">Login</string>
    <string name="sign_up_text">Sign Up!</string>
    <string name="title_activity_login">Sign in</string>
    <string name="add_item">Add New Item</string>
    <string name="action_logout">Logout</string>
    <string name="add_comment">Submit</string>
    <string name="your_comment">Your comment</string>
    <string name="pass_no_match">Old Password Does Not Match</string>
    <string name="new_pass_no_match">New Passwords Do Not Match</string>
    <string name="empty_fields">Please fill out all the fields!</string>
    <string name="transition_string">Shared Element Transition</string>
</resources>
